--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
   padding: 2rem;
   text-align: center;
   font-family: sans-serif;
-  background: #f0f4f8;
+  background: transparent;
   color: #223244;
 }
 
