--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
   text-align: center;
   font-family: sans-serif;
   background: transparent;
-  color: #3e4042c2;
+  color: #223244;
 }
 
 .title {
